--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
 asgiref==3.5.2
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.2.13
 django-filter==21.1
+django-rest-swagger==2.2.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.11.4
+itypes==1.2.0
+Jinja2==3.1.2
 Markdown==3.3.7
+MarkupSafe==2.1.1
+openapi-codec==1.3.2
 psycopg2-binary==2.9.3
 python-decouple==3.6
 pytz==2022.1
+requests==2.28.0
+simplejson==3.17.6
 sqlparse==0.4.2
 typing_extensions==4.2.0
+uritemplate==4.1.1
+urllib3==1.26.9
 whitenoise==3.3.1
 zipp==3.8.0
