--- a/requirements.txt
+++ b/requirements.txt
@@ -8,18 +8,25 @@ Django==3.2.13
 django-filter==21.1
 django-rest-swagger==2.2.0
 djangorestframework==3.13.1
+djangorestframework-camel-case==1.3.0
+drf-yasg==1.20.0
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.4
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 Markdown==3.3.7
 MarkupSafe==2.1.1
 openapi-codec==1.3.2
+packaging==21.3
 psycopg2-binary==2.9.3
+pyparsing==3.0.9
 python-decouple==3.6
 pytz==2022.1
 requests==2.28.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 simplejson==3.17.6
 sqlparse==0.4.2
 typing_extensions==4.2.0
