env and settings

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # -------------------- Django
 SECRET_KEY=)m=yz=qbxfryyb!n6y%o1v)06n5xm(8r2d_)_wt((+^#fxv%@v
 DEBUG=True
-ALLOWED_HOSTS=127.0.0.1, .localhost, 'https://college-open-api.herokuapp.com' 
+ALLOWED_HOSTS=127.0.0.1, .localhost, 'college-open-api.herokuapp.com' 
 DOMAIN=127.0.0.1
 
 # -------------------- DB
