--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+behave==1.2.6
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 coreapi==2.3.3
@@ -19,6 +20,9 @@ importlib-metadata==4.11.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+Kivy==2.1.0
+Kivy-Garden==0.1.5
+kivymd @ git+https://github.com/HeaTTheatR/KivyMD.git@286ee784d75570d20de9141ac8097cde795c6dc7
 Markdown==3.3.7
 MarkupSafe==2.1.1
 openapi-codec==1.3.2
@@ -41,5 +45,5 @@ typing_extensions==4.2.0
 uritemplate==4.1.1
 urllib3==1.26.9
 urlman==2.0.1
-whitenoise==3.3.1
+whitenoise==5.0.1
 zipp==3.8.0
