--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
 asgiref==3.5.2
 behave==1.2.6
 certifi==2022.5.18.1
+cffi==1.15.1
 charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==37.0.4
+defusedxml==0.7.1
+Deprecated==1.2.13
 dj-database-url==0.5.0
 Django==3.1.8
+django-allauth==0.51.0
 django-behaviors==0.5.1
+django-braces==1.15.0
 django-filter==21.1
 django-lifecycle==1.0.0
+django-oauth-toolkit==2.1.0
+django-rest-framework-social-oauth2==1.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.13.1
 djangorestframework-camel-case==1.3.0
+djangorestframework-simplejwt==5.2.0
 docutils==0.18.1
 drf-yasg==1.20.0
 gunicorn==20.1.0
@@ -20,30 +29,39 @@ importlib-metadata==4.11.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+jwcrypto==1.3.1
 Kivy==2.1.0
 Kivy-Garden==0.1.5
 kivymd @ git+https://github.com/HeaTTheatR/KivyMD.git@286ee784d75570d20de9141ac8097cde795c6dc7
 Markdown==3.3.7
 MarkupSafe==2.1.1
+oauthlib==3.2.0
 openapi-codec==1.3.2
 packaging==21.3
 parse==1.19.0
 parse-type==0.6.0
 Pillow==9.1.1
 psycopg2-binary==2.9.3
+pycparser==2.21
 Pygments==2.12.0
+PyJWT==2.4.0
 pyparsing==3.0.9
 python-decouple==3.6
+python3-openid==3.2.0
 pytz==2022.1
 requests==2.28.0
+requests-oauthlib==1.3.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 simplejson==3.17.6
 six==1.16.0
+social-auth-app-django==5.0.0
+social-auth-core==4.3.0
 sqlparse==0.4.2
 typing_extensions==4.2.0
 uritemplate==4.1.1
 urllib3==1.26.9
 urlman==2.0.1
 whitenoise==5.0.1
+wrapt==1.14.1
 zipp==3.8.0
